# mailgun-mail-store

./: LICENSE  README.md  app.py  conftest.py  dmarc_fail_scan.py  gunicorn.conf.py  heartbeat.py  mailgun_send_test.py  mini.py  pyproject.toml  reprocess_failed.py  requirements.in  requirements.txt
.github/: dependabot.yml
doc/: PLAN_drop_parsedmarc.md
docs/: Configuration.md  Home.md  Installation.md  Linting.md  PLAN_continuous_deployment.md  Testing.md  Ubuntu-Quickstart.md
tests/: conftest.py  test_check_pass_fail.py  test_dmarc_fail_scan.py  test_heartbeat.py  test_helpers.py  test_integration.py  test_reprocess_failed.py  test_routes.py  test_unit.py  test_validation.py
